--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGO_URL=mongodb+srv://pathakkaranjiit:karan%40123@cluster0.f6sp32q.mongodb.net/pathakkaranjiit?retryWrites=true&w=majority&appName=Cluster0
 
- CLOUD_NAME = dzb7eplit
- API_KEY = 448251726942483
- API_SECRET = ZFn0a3ivkWCrLaYRo1NtvpUrJDE
+MONGO_URL = <your_mongodb_connection_string>
+ CLOUD_NAME = <your_cloudinary_cloud_name>
+ API_KEY = <your_cloudinary_api_key>
+ API_SECRET = <your_cloudinary_secret>
