--- a/client/package.json
+++ b/client/package.json
@@ -37,10 +37,12 @@
     "yup": "^1.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+   
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start --host 0.0.0.0",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -60,5 +62,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  }
 }
